syntax = "proto3";

package logout;

option go_package = "pkg/grpc";

import "google/protobuf/empty.proto";

// Logout messages
message LogoutRequest {
  string token = 1;
}

// Service for user logout
service LogoutService {
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
}
